--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First git repo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div class="first">
+    <h3>My Blog web site</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente eius fugiat voluptates vero! Culpa eum perspiciatis eveniet illo! Inventore non aperiam temporibus animi illum, suscipit facere placeat maiores repellat perferendis?</p>
+    </div>
+    <div class="second">
     <h3>My Blog web site</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente eius fugiat voluptates vero! Culpa eum perspiciatis eveniet illo! Inventore non aperiam temporibus animi illum, suscipit facere placeat maiores repellat perferendis?</p>
     </div>
